--- a/S-R_in_Editor_3.6
+++ b/S-R_in_Editor_3.6
@@ -1,5 +1,5 @@
 // ==UserScript==
-// @name        S-R in Editor ⭐ TEST2025
+// @name        S-R in Editor ⭐
 // @namespace        http://tampermonkey.net/
 // @version        3.6
 // @description        通常編集枠で実行できる 検索 / 置換 ツール
@@ -8,6 +8,8 @@
 // @exclude        https://blog.ameba.jp/ucs/entry/srventrylist.do*
 // @icon        https://www.google.com/s2/favicons?sz=64&domain=ameba.jp
 // @grant        none
+// @updateURL        https://github.com/personwritep/S-R_in_Editor/raw/main/S-R_in_Editor.user.js
+// @downloadURL        https://github.com/personwritep/S-R_in_Editor/raw/main/S-R_in_Editor.user.js
 // ==/UserScript==
 
 
